# VacancyDB-Explorer

./: .flake8  .gitignore  config.py  main.py  pyproject.toml
src/: api.py  data_filler.py  database.py  db_manager.py  file_manager.py  vacancy_manager.py
tests/: test_api.py  test_data_filler.py  test_database.py  test_db_manager.py  test_file_manager.py  test_vacancy_manager.py
